--- a/trunk/perldoc/ko/perl/5.10/perlfunc.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlfunc.pod
@@ -7676,8 +7676,8 @@ TEMPLATE 는, 아래처럼 값의 형태와 순서를 지정하는 문자를 나
 
 =end original
 
-    p   ヌル文字で終端する文字列へのポインタ
-    P   構造体 (固定長文字列) へのポインタ
+    p   null 문자에서 종단하는 문열로의 포인터
+    P   구조체(고정길이 문자열)로의 포인터
 
 =begin original
 
@@ -7687,9 +7687,9 @@ TEMPLATE 는, 아래처럼 값의 형태와 순서를 지정하는 문자를 나
 
 =end original
 
-    u   uuencode 文字列
-    U	Unicode 文字番号。文字モードでは文字に、バイトモードなら UTF-8 に
-	(EBCDIC システムでは UTF-EBCDIC に)エンコードされます
+    u   uuencode 문자열
+    U	Unicode 문자번호. 문자모드에서는 문자로, 바이트 모드라면 UTF-8 로 
+        (EBCDIC 시스템ㅔ서는 UTF-EBCDIC 로) 인코드됩니다.
 
 =begin original
 
@@ -7700,10 +7700,11 @@ TEMPLATE 는, 아래처럼 값의 형태와 순서를 지정하는 문자를 나
 
 =end original
 
-    w	A BER 圧縮変数(ASN.1 BER ではありません。詳細については perlpacktut を
-	参照してください)。このバイト列はできるだけ少ない桁数で表現された
-	128 を基とした符号なし整数で、最上位ビットから順に並びます。
-	最後のバイト以外の各バイトのビット 8 (上位ビット) がセットされます。
+    w	A BER 압축 변수(ASN.1 BER 이 아닙니다. 자세한 내용에 대해서는 
+        perlpacktut 를 참조해주세요.) 이 바이트열은 가능한한 적은 자릿수로
+        표현된 128 을 기본으로한 부호없는 정수로 최상위 비트에서 순서대로
+        나열됩니다. 마지막의 바이트 이외의 각 바이트의 비트 8(상위 비트)가 
+        설정됩니다.
 
 =begin original
 
@@ -7716,12 +7717,12 @@ TEMPLATE 는, 아래처럼 값의 형태와 순서를 지정하는 문자를 나
 
 =end original
 
-    x	ヌル文字
-    X	1 文字後退
-    @	一番内側の () の組の開始位置から数えて、絶対位置までヌル文字で
-        埋めるか切り詰める
-    .   値で指定した絶対位置までヌル文字で埋めるか切り詰める
-    (	() の組の開始
+    x	null 바이트
+    X	1 문자 후퇴
+    @	제일 안쪽의 () 의 쌍의 개시위치에서 세서, 절대위치까지 null 문자로
+        채우거나 자른다.
+    .   값으로 지정한 절대위치까지 null 문자로 채우거나 자른다.
+    (	() 의 쌍의 시작
 
 =begin original
 
@@ -7731,8 +7732,8 @@ valid):
 
 =end original
 
-以下に示す一つまたは複数の修飾子を、TEMPLATE の文字のいくつかにオプションで
-付けることができます(表の 2 列目は、その修飾子が有効な文字です):
+아래에 나타난 하나 또는 복수의 수식자를 TEMPLATE 의 문자의 몇개인가에 옵션으로
+붙일 수 있습니다(표의 2줄째는 그 수식자가 유효한 문자입니다):
 
 =begin original
 
@@ -7741,8 +7742,8 @@ valid):
 
 =end original
 
-    !   sSlLiI     固定の(16/32 ビット)サイズではなく、ネイティブな
-                   (short, long, int)サイズを強制する。
+    !   sSlLiI     고정의 (16/32 비트) 사이즈가 아닌 네이티브한(short,long,int)
+                   사이즈를 강제한다.
 
 =begin original
 
@@ -7750,7 +7751,7 @@ valid):
 
 =end original
 
-        xX         x と X をアライメントコマンドとして振舞わせる。
+        xX         x 와 X 를 alignment command 로 행동하게 합니다.
 
 =begin original
 
@@ -7758,7 +7759,7 @@ valid):
 
 =end original
 
-        nNvV       整数を符号なしではなく符号付きとして扱わせる。
+        nNvV       정수를 부호붙은 것으로 취급한다.
 
 =begin original
 
@@ -7768,8 +7769,8 @@ valid):
 
 =end original
 
-        @.         pack された内部表現のバイトオフセットとして位置を指定する。
-                   効率的ですが危険です。
+        @.         pack 된 내부표현의 바이트오프셋으로 위치를 지정한다.
+                   효율적이지만 위험합니다.
 
 =begin original
 
@@ -7778,8 +7779,8 @@ valid):
 
 =end original
 
-    >   sSiIlLqQ   これらの型のバイト順をビッグエンディアンに強制します
-        jJfFdDpP   (「大きい端」が構造に触れています)
+    >   sSiIlLqQ   이 형태의 바이트 순서을 big-edian 으로 강제합니다
+        jJfFdDpP   ("big end" 가 구조를 건드립니다) 
 
 =begin original
 
@@ -7788,8 +7789,8 @@ valid):
 
 =end original
 
-    <   sSiIlLqQ   これらの型のバイト順をリトルエンディアンに強制します
-        jJfFdDpP   (「小さい端」が構造に触れています)
+    <   sSiIlLqQ   이 형태의 바이트 순서를 little-edian 으로 강제합니다
+        jJfFdDpP   ("little end" 가 구조를 건드립니다) 
 
 =begin original
 
@@ -7799,9 +7800,8 @@ that group, including subgroups.
 
 =end original
 
-C<E<gt>> と C<E<lt>> の修飾子は C<()>-グループでも使えます;
-この場合はそのグループと副グループ内の全ての要素を特定のバイト順に
-強制します。
+C<E<gt>> 와 C<E<lt>> 의 수식자는 C<()>- 그룹에서도 사용할 수 있습니다;
+이 경우는 그 그룹과 부 그룹안의 모든 요소를 특정의 바이트순으로 강제합니다.
 
 =begin original
 
@@ -7809,7 +7809,7 @@ The following rules apply:
 
 =end original
 
-以下の条件が適用されます:
+아래의 조건이 적용됩니다:
 
 =over 8
 
@@ -7829,14 +7829,14 @@ C<pack 'C[80]', @arr>.
 
 =end original
 
-これらの文字の後には、繰り返し数を示す数字を付けることができます。
+이 문자의 끝에서는 반복수를 나타내는 숫자를 붙일 수 있습니다.
 C<a>, C<A>, C<Z>, C<b>, C<B>, C<h>, C<H>, C<@>, C<.>, C<x>, C<X>, C<P>
-以外の全ての型では、LIST からその数の値を取り出して使います。
-繰り返し数に C<*> を指定すると、その時点で残っているすべての要素を意味します。
-ただし、C<@>, C<x>, C<X> では C<0> と等価で、
-C<.> では文字列の開始からの相対位置を意味し、
-C<u> では 1 (あるいは 45 でも同じ) と等価です。
-数値の繰り返し数は C<pack 'C[80]', @arr> のように大かっこで囲むこともできます。
+이외의 모든 형태에서는 LIST 에서 그 숫자값을 뽑아내서 사용합니다.
+반복 수에 C<*> 를 지정하면, 그 시점에서 남아있는 모든 요소를 의미합니다.
+단, C<@>, C<x>, C<X> 에서는 C<0> 과 같고, 
+C<.> 에서는 문자열의 시작에서 상대위치를 의미하고,
+C<u> 에서는 1(혹은 45라도 같은) 과 같습니다.
+숫자의 반본 수는 C<pack 'C[80]', @arr> 같은 대괄호로 묶을 수 있습니다.
 
 =begin original
 
@@ -7850,14 +7850,13 @@ possible alignment.
 
 =end original
 
-大かっこで囲まれたテンプレートで数値の繰り返し数を置き換えることができます;
-このテンプレートでパックされたバイト長が繰り返し数として使われます。
-例えば、C<x[L]> は long をスキップします(long のバイト数だけスキップします);
-テンプレート C<$t X[$t] $t> は $t を unpack したものの 2 倍を
-unpack() します。
-(C<x![d]> のように) 大かっこにアライメントコマンドが含まれている場合、
-パックされた長さは、テンプレートの先頭で最大限可能なアライメントを
-持っているものとして計算されます。
+대괄호로 묶은 템플레이트에서 수치의 반복수를 바꿀 수 있습니다;
+이 템플레이트에서 pack 된 바이트 길이가 반복수로 사용됩니다.
+예를 들면, C<x[L]> 는 long 을 스킵합니다(long 이 바이트수만 스킵합니다);
+템플레이트 C<$t X[$t] $t> 는 $t 를 unpack 한 것의 2배를 unpack() 합니다.
+(C<x![d] 처럼) 큰 괄호로 alignment command 가 포함된 경우, 
+pack 된 길이는 템플레이트의 맨 앞에서 최대한 가능한 alignment 를 
+가지고 있는 것으로 계산됩니다.
 
 =begin original
 
@@ -7867,8 +7866,8 @@ of the item).
 
 =end original
 
-C<*> が C<Z> と共に使われた場合、末尾にヌルバイトをつけます
-(従ってパックされた結果は要素の C<length> の値より 1 大きくなります)。
+C<*> 가 C<Z> 로 합께 사용된 경우, 끝단에 null 바이트를 붙입니다
+(따라서 pack 된 결과는 요소의 C<length> 의 값보다 1 이 크게 됩니다).
 
 =begin original
 
@@ -7877,8 +7876,8 @@ of the innermost () group.
 
 =end original
 
-C<@> を使うと、繰り返し数は一番内側の () グループの先頭からのオフセットを
-表現します。
+C<@> 를 사용하면, 반복 수는 제일 안쪽의 () 그룹의 맨앞에서의 오프셋을 
+표현합니다.
 
 =begin original
 
@@ -7892,13 +7891,12 @@ level).
 
 =end original
 
-C<.> で使われると、繰り返し数は値のオフセットを計算するための開始位置を
-決定するために使われます。
-繰り返し数が 0 なら、現在位置からの相対位置となります。
-繰り返し数が C<*> なら、オフセットは pack された文字列の先頭からの相対位置です。
-そして整数 C<n> なら、オフセットは一番内側から n 番目の () グループの先頭
-(または C<n> がグループレベルより大きい場合は文字列の先頭)からの
-相対位置です。
+C<.> 로 사용된 반복수는 값의 오프셋를 계산하기 위한 개시위치를 결정하기
+위해 사용됩니.
+반복수는 0 이라면, 현재위치에서 상대위치가 됩니다.
+반복수가 C<*> 라면, 오프셋은 pack 된 문자열의 맨앞에서의 상대위치입니다.
+그리고 정수 C<n> 이라면 오프셋은 제일 안쪽에서 n 번째의 () 그룹의 맨 앞
+(또는 C<n> 이 그룹레벨보다 큰 경우는 문자열의 맨앞)에서의 상대위치입니다.
 
 =begin original
 
@@ -7908,9 +7906,9 @@ count should not be more than 65.
 
 =end original
 
-C<u> での繰り返し回数は、出力行毎に最大何バイトまでをエンコードするかを
-示します。0, 1, 2 は 45 として扱われます。
-繰り返し数は 65 を超えてはなりません。
+C<u> 에서의 반복 횟수는 출력줄 마다 최대 몇 바이트까지를 인코드할 것인가를
+나타냅니다. 0,1,2는 45로 취급됩니다.
+반복수는 65를 넘어서는 안됩니다.
 
 =item *
 
@@ -7923,12 +7921,12 @@ after the first null, and C<a> returns data verbatim.
 
 =end original
 
-C<a>, C<A>, C<Z> という型を使うと、値を一つだけ取り出して使いますが、
-繰り返し数で示す長さの文字列となるように、必要に応じてヌル文字か
-スペース文字を付け足します。
-unpack するとき、C<A> は後続の空白やヌル文字を取り除きます。
-C<Z>は最初のヌル文字以降の全てを取り除きます。
-C<a>はデータをそのまま返します。
+C<a>, C<A>, C<Z> 같은 형태를 사용하면, 값을 하나만 뽑아서 사용하지만, 
+반복수로 나타내는 길이의 문자열이 되게 필요에 따라 null 문자나 
+스페이스 문자를 붙입니다.
+unpack 할 때, C<A> 는 나중에 읽는 공백이나 null 문자를 뺍니다.
+C<Z> 은 최초의 null 문자이후의 모든 것을 뺍니다.
+C<a> 는 데이터를 그대로 반환합니다.
 
 =begin original
 
@@ -7939,11 +7937,10 @@ count is 0).
 
 =end original
 
-pack する値が長すぎる場合、切り詰められます。
-長すぎてかつ明示的に個数が指定されている場合、
-C<Z> は C<$count-1> バイトまで pack し、その後にヌルバイトがつきます。
-従って、C<Z> は(繰り返し数が 0 の場合を除いて)常に末尾にヌルバイトが
-つきます。
+pack 하는 값이 너무 긴 경우, 잘려집니다.
+너무길고 명시적으로 갯수가 지정된 경우 
+C<Z> 는 C<$count-1> 바이트까지 pack 하고, 그 뒤로 null 바이트가 붙습니다.
+따라서 C<Z> 는 (반복수가 0인 경우를 빼고) 항상 끝단에 null 바이트가 붙습니다.
 
 =item *
 
